# irodori-extension-snowflake

./: Cargo.toml  Makefile  README.md  connector.config.json  connector.source.json  irodori.extension.json
dialects/: snowflake.json
native/source/: README.md
src/: lib.rs
