[package]
name = "irodori-extension-snowflake"
version = "0.1.0"
edition = "2021"
license = "MIT OR 0BSD"
description = "Irodori Table native connector extension."
publish = false

[lib]
name = "irodori_extension_snowflake"
crate-type = ["cdylib", "rlib"]


[dev-dependencies]
serde_json = "1"

[profile.dev.package."*"]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
